...
  Widget build(BuildContext context) {
    return Container(
      margin: EdgeInsets.only(left: 9, right: 9),
      height: Responsive.widthFixOver(60, 20, context),
      width: MediaQuery.of(context).size.width,
      child: CupertinoButton(
        key: Key('MarkAsCompleted_button'),
        padding: EdgeInsets.all(0),
        color: favorColors.PrimaryBlue,
        borderRadius: BorderRadius.circular(15),
        child: Row(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
...
      ),
    );
  }

  Widget buildRatingPicker() {
    return SizedBox(
      key: Key("RatingPicker"),
      height: Responsive.height(30, context),
      child: Column(
        mainAxisAlignment: MainAxisAlignment.spaceEvenly,
        mainAxisSize: MainAxisSize.max,
        children: [
          // RATING TEXT
...
