...
                      blurRadius: 5,
                      offset: Offset(0, 1),
                    ),
                  ],
                ),
                child: CupertinoButton(
                  key: Key("favor_widget_more_button"),
                  padding: EdgeInsets.all(0),
                  color: favorColors.PrimaryBlue,
                  borderRadius: BorderRadius.circular(90),
                  child: Text(
                    "More...",
                    style: TextStyle(fontSize: 14, fontWeight: FontWeight.bold),
...
          width: Responsive.widthFixOver(210, 55, context),
          child: ClipRRect(
            borderRadius: BorderRadius.all(
              Radius.circular(10),
            ),
            child: ElevatedButton(
              key: Key("BookedFavorWidget_button"),
              style: ButtonStyle(
                backgroundColor:
                    MaterialStateProperty.all<Color>(favorColors.IntroBg),
                foregroundColor:
                    MaterialStateProperty.all<Color>(favorColors.PrimaryBlue),
                overlayColor:
...
