...
  Post? post;
  String userType;

  @override
  Widget build(BuildContext context) {
    return Row(
      key: Key("favor_information_page"),
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        /// LEFT SCREEN
        SingleChildScrollView(
          child: ConstrainedBox(
            constraints: BoxConstraints(
...
